src/pages/AccountPage/AccountPage.scss
@use "/src/styles/__globals" as *;

.acct-page {
    &__welcome {
        margin-top: 3rem;

        @include tablet {
            margin-top: 4rem;
            font-size: 1.8rem;
        }
 
    }

    &__btns-container {
        margin: 3rem auto;
        display: flex;
        justify-content: space-evenly;
        align-items: center;
        width: 90%;

        @include tablet {
            margin-top: 4rem;
        }
    }

    &__btn-wrapper {
        max-width: 1fr;
        height: 10rem;
        width: 10rem;
    }

    &__btn {
        border: none;
        border-radius: 4px;
        padding: 1rem;
        width: 10rem;
        height: 10rem;
        background: $dark-gradient;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 1rem;
        color: $light;
        opacity: 0.7;

        &:hover {
            opacity: 1;
            transform: scale(1.05);
            cursor: pointer;
        }

        @include tablet {
            min-width: 15rem;
            max-width: 15rem;
            font-size: 1.5rem;
        }

        @include desktop {
            min-width: 20rem;
            max-width: 20rem;
        }
    }

    &__icon {
        width: 4rem;
        height: 4rem;
        filter: brightness(0) saturate(100%) invert(89%) sepia(10%) saturate(427%) hue-rotate(324deg) brightness(111%) contrast(87%);
        
        &--edit {
            max-width: 3rem;
            max-height: 3rem;
            margin-bottom: 0.5rem;
        }
    }
}

a {
    margin: 0;
}

